--- a/views/index.html
+++ b/views/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>my first web page</title>
+      
     </head>
-    <body>
+    <body class="lato-regular">
         <h1 style="border: solid 2px black;" id="this is my new web site">
         <a href="#footer">this is my new web site</a>
     </h1>
